Overflow-x fixing on about, angelahack1

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,9 +90,7 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   background-color: var(--bs-body-bg);
-  /* Notr supported by Egde */
-  /* -webkit-text-size-adjust: 100%; */
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overflow-x: clip;
 }
 
 hr {
